--- a/src/index.css
+++ b/src/index.css
@@ -42,10 +42,20 @@ body {
 }
 
 .glass {
-    background: rgba(100, 100, 100, 0.1);
+    /*background: rgba(30, 50, 100, 0.3);*/
+    border-radius: 12px;
+    /*box-shadow: inset 1px 1px 0.5px 0 rgba(255,255,255,0.4);*/
+    box-shadow: inset 1px 1px 0.7px 0.7px rgba(255,255,255,0.3);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
+}
+
+.glassInput {
+    background: rgba(30, 50, 100, 0.5);
+    /*background: linear-gradient(rgba(15, 25, 50, 0.2), rgba(30, 50, 100, 0.5), rgba(15, 25, 50, 0.2));*/
     border-radius: 12px;
     /*box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);*/
-    box-shadow: inset 1px 1px 0.5px 0 rgba(255,255,255,0.4);
+    box-shadow: inset 0 0.5px 1px 0 rgba(255,255,255,0.4);
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(3px);
 }
