--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,15 @@ body {
     -webkit-backdrop-filter: blur(3px);
 }
 
+.glass-white {
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 12px;
+    /*box-shadow: inset 1px 1px 0.5px 0 rgba(255,255,255,0.4);*/
+    box-shadow: inset 1px 1px 0.7px 0.7px rgba(255,255,255,0.3);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
+}
+
 .glassInput {
     background: rgba(255, 255, 255, 0.1);
     /*background: linear-gradient(rgba(15, 25, 50, 0.2), rgba(30, 50, 100, 0.5), rgba(15, 25, 50, 0.2));*/
