--- a/src/index.css
+++ b/src/index.css
@@ -37,9 +37,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    /*background-color: rgba(255, 255, 255, 0.1);*/
     background-blend-mode: overlay;
-    /*filter: brightness(0.52) contrast(0.5);*/
 }
 
 body::before {
@@ -72,11 +70,11 @@ body::before {
 }
 
 .glassInput {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0, 0.3);
     /*background: linear-gradient(rgba(15, 25, 50, 0.2), rgba(30, 50, 100, 0.5), rgba(15, 25, 50, 0.2));*/
     border-radius: 12px;
     /*box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);*/
-    box-shadow: inset 0 0.5px 1px 0 rgba(255,255,255,0.4);
+    box-shadow: inset 0.5px 0.5px 0.5px 0.5px rgba(0,0,0,0.3);
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(3px);
 }
